# MQTT-ESP32-Dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  fix-docker-network-v2.sh
bridge/demo/: .env.example  Cargo.toml  Dockerfile
contracts/: examples.json  topics.md
front/: package-lock.json  package.json
front/src/lib/: index.js  types.js
front/src/lib/components/: DeviceFilter.svelte  StatisticsCards.svelte  TelemetryBarChart.svelte
front/src/routes/: +page.svelte
