[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rumqttc = { version = "0.24", optional = true }
dotenvy = { version = "0.15", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
server = ["tokio", "tokio-tungstenite", "futures-util", "serde", "serde_json", "rumqttc", "dotenvy"]
